rm availability_zone

--- a/drain.html.md.erb
+++ b/drain.html.md.erb
@@ -76,10 +76,11 @@ if [ -f $pid_path ]; then
 fi
 
 echo 0 # ok to exit; do not wait for anything
+
 exit 0
 </pre>
 
 ---
 [Back to Table of Contents](index.html#release)
 
-Previous: [Post-start script](post-start.html)
+Previous: [Post-deploy script](post-deploy.html)
