--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -62,13 +62,12 @@ See [Recent Additions and Updates](recent.html).
 * [Cloud config](cloud-config.html)
     * [AZs](azs.html)
     * [Networks](networks.html)
-* Resource Pools
     * [VM anti-affinity](vm-anti-affinity.html)
 * [Runtime config](runtime-config.html)
     * [Addons](runtime-config.html#addons)
 * [Trusted certificates](trusted-certs.html)
-* Deployment Jobs
-    * [Renaming/migrating jobs](migrated-from.html)
+* [Manifest v2 schema](manifest-v2.html)
+    * [Renaming/migrating instance groups](migrated-from.html)
 * [Persistent and orphaned disks](persistent-disks.html)
 
 ### <a id="cpi-config"></a> Detailed CPI configuration & troubleshooting
