--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,7 @@
 Title: Recent Additions and Updates
 ---
 
+* [Manifest v2](manifest-v2.html)
 * [Cloud config](cloud-config.html)
 * [AZs](azs.html)
 * [Links](links.html)
