Add human-readable-vm-names documentation

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -81,6 +81,7 @@ See [Recent Additions and Updates](recent.html).
 * [OpenStack](openstack-cpi.html)
     * [Using Keystone v3 API](openstack-keystonev3.html)
     * [Extended Registry configuration](openstack-registry.html)
+    * [Human-readable VM names](openstack-human-readable-vm-names.html)
 * [vSphere](vsphere-cpi.html)
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
     * [Storage DRS and vMotion Support](vsphere-vmotion-support.html)
