--- a/openstack-keystonev3.html.md.erb
+++ b/openstack-keystonev3.html.md.erb
@@ -29,6 +29,8 @@ title: Using Keystone API v3
 1. Deploy the Director
 
 ---
+[Back to Table of Contents](index.html#cpi-config)
+
 Next: [Extended Registry configuration](openstack-registry.html)
 
 Previous: [OpenStack](openstack-cpi.html)
