--- a/openstack-registry.html.md.erb
+++ b/openstack-registry.html.md.erb
@@ -26,4 +26,6 @@ title: Extended Registry configuration
 ---
 [Back to Table of Contents](index.html#cpi-config)
 
+Next: [Using human-readable VM names](openstack-human-readable-vm-names.html)
+
 Previous: [Using Keystone API v3](openstack-keystonev3.html)
