--- a/s3-release-blobstore.html.md.erb
+++ b/s3-release-blobstore.html.md.erb
@@ -85,6 +85,19 @@ blobstore:
 
 A full list of S3 regions and endpoints is available [here](http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region).
 
+## <a id="setting-folder"></a> Setting S3 folder
+
+By default, blobs are stored in the bucket root. If you need to use a single bucket for more than one purpose, you can use the `folder` option to specify a prefix used for all blobs. Do not include a starting or ending slash.
+
+```yaml
+---
+blobstore:
+  provider: s3
+  options:
+    bucket_name: <blobs_bucket_name>
+    folder: my-release-name/with-custom-blobs-folder
+```
+
 ## <a id="usage"></a> Usage
 
 Once the S3 bucket and IAM user are configured with correct access rules, `bosh upload blobs` should succeed and the S3 bucket should contain uploaded blobs. Running `bosh create release --final` will also place additional blobs into the bucket.
