Add validation for self-signed OpenStack endpoints

--- a/openstack-human-readable-vm-names.html.md.erb
+++ b/openstack-human-readable-vm-names.html.md.erb
@@ -25,4 +25,6 @@ title: Using human-readable VM names instead of UUIDs
 ---
 [Back to Table of Contents](index.html#cpi-config)
 
+Next: [Validating self-signed OpenStack endpoints](openstack-self-signed-endpoints.html)
+
 Previous: [Extended Registry configuration](openstack-registry.html)
