--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -82,6 +82,7 @@ See [Recent Additions and Updates](recent.html).
     * [Using Keystone v3 API](openstack-keystonev3.html)
     * [Extended Registry configuration](openstack-registry.html)
     * [Human-readable VM names](openstack-human-readable-vm-names.html)
+    * [Validating self-signed OpenStack endpoints](openstack-self-signed-endpoints.html)
 * [vSphere](vsphere-cpi.html)
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
     * [Storage DRS and vMotion Support](vsphere-vmotion-support.html)
