--- a/openstack-self-signed-endpoints.html.md.erb
+++ b/openstack-self-signed-endpoints.html.md.erb
@@ -4,7 +4,7 @@ title: Validating self-signed OpenStack endpoints
 
 <p class="note">Note: This feature is available with bosh-openstack-cpi v23+.</p>
 
-When your OpenStack is using with a self-signed certificate, you want to enable the OpenStack CPI to validate it. You can configure the OpenStack CPI with the public certificate of the RootCA that signed the OpenStack endpoint certificate.
+When your OpenStack is using a self-signed certificate, you want to enable the OpenStack CPI to validate it. You can configure the OpenStack CPI with the public certificate of the RootCA that signed the OpenStack endpoint certificate.
 
 1. Configure `properties.openstack.connection_options` to include the property `ca_cert`. It can contain one or more certificates.
 
