"one-off" has a hyphen in the middle

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -50,7 +50,7 @@ See [Recent Additions and Updates](recent.html).
     * [Uploading stemcells](uploading-stemcells.html)
     * [Uploading releases](uploading-releases.html)
     * [Deploying](deploying.html)
-    * Running one off tasks
+    * Running one-off tasks
     * Updating deployment to deal with security vulnerabilities
 * [Deploying step-by-step](deploying-step-by-step.html)
 * [CLI commands](sysadmin-commands.html)
