Clarify wording for Director Tasks section

--- a/director-users.html.md.erb
+++ b/director-users.html.md.erb
@@ -71,7 +71,7 @@ To configure the Director with a list of users:
 ---
 ## <a id="hm"></a> Director Tasks
 
-The director is recording the user initiating a [director task](director-tasks.html) in the task audit log.
+When a user initiates a [director task](director-tasks.html), the director logs the user in the task audit log.
 
 ---
 ## <a id="hm"></a> Health Monitor Authentication
