update min bosh versions for newer features

--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -2,9 +2,9 @@
 title: Runtime Config
 ---
 
-<p class="note">Note: This feature is available with bosh-release ?.</p>
+<p class="note">Note: This feature is available with bosh-release v255.4+.</p>
 
-As of bosh-release ? the Director has a way to specify global configuration for all VMs in all deployments. The runtime config is a YAML file that defines IaaS agnostic configuration that applies to all deployments.
+The Director has a way to specify global configuration for all VMs in all deployments. The runtime config is a YAML file that defines IaaS agnostic configuration that applies to all deployments.
 
 ---
 ## <a id='update'></a> Updating and retrieving runtime config
