--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -2,7 +2,7 @@
 title: Manifest v2 Schema
 ---
 
-<p class="note">Note: This feature is available with bosh-release ?.</p>
+<p class="note">Note: This feature is available with bosh-release v255.4+.</p>
 
 <p class="note">Note: Once you opt into using cloud config all deployments must be converted to use manifest v2 format that disallows IaaS specific configuration.</p>
 
