--- a/post-deploy.html.md.erb
+++ b/post-deploy.html.md.erb
@@ -2,11 +2,16 @@
 title: Post-deploy Script
 ---
 
-<p class="note">Note: This feature is available with bosh-release ? and only for releases deployed with 3125+ stemcells. bosh-lite support is planned but currently is not available since latest available stemcell for bosh-lite is 2774.</p>
+<p class="note">Note: This feature is available with bosh-release v255.4+ and only for releases deployed with 3125+ stemcells. bosh-lite support is planned but currently is not available since latest available stemcell for bosh-lite is 2774.</p>
 
 <p class="note">Note: Releases that make use of post-deploy scripts and are deployed on older stemcells or with an older Director may potentially deploy; however, post-deploy script will not be called.</p>
 
 Release job can have a post-deploy script that will run after all jobs in the deployments successfully started (and ran post-start scripts). This script allows the job to execute any additional commands against a whole deployment before considering deploy finished.
+
+---
+## <a id="director-configuration"></a> Director Configuration
+
+Currently the Director does run post deploy scripts by default. Use [`director.enable_post_deploy` property](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.enable_post_deploy) to enable running scripts.
 
 ---
 ## <a id="job-configuration"></a> Job Configuration
