mention instance metadata

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -103,6 +103,7 @@ See [Recent Additions and Updates](recent.html).
 * [Structure of a managed VM](vm-struct.html)
     * [VM configuration locations](vm-config.html)
 * [Location and use of logs](job-logs.html)
+* [Instance metadata](instance-metadata.html)
 * Debugging issues with jobs
 
 ---
