mentioning removing compiler

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -37,6 +37,7 @@ See [Recent Additions and Updates](recent.html).
 * [User management](director-users.html)
     * [UAA Integration](director-users-uaa.html)
 * [SSL certificate configuration](director-certs.html)
+* [Removal of compilers](remove-dev-tools.html)
 * [Configuring external database](director-configure-db.html)
 * [Configuring external blobstore](director-configure-blobstore.html)
 * [Micro CLI plugin **[deprecated, but supported]**](bootstrap.html)
