--- a/director-users.html.md.erb
+++ b/director-users.html.md.erb
@@ -66,7 +66,7 @@ To configure the Director with a list of users:
 ---
 ## <a id="uaa"></a> UAA Integration
 
-[Configure your director to use the UAA for user management](director-users-uaa.html)
+[Configure the Director with UAA user management](director-users-uaa.html).
 
 ---
 ## <a id="hm"></a> Director Tasks
