--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -36,6 +36,7 @@ See [Recent Additions and Updates](recent.html).
 
 * [User management](director-users.html)
     * [UAA Integration](director-users-uaa.html)
+    * [UAA Permissions](director-users-uaa-perms.html)
 * [SSL certificate configuration](director-certs.html)
 * [Removal of compilers](remove-dev-tools.html)
 * [Configuring external database](director-configure-db.html)
