--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -134,6 +134,10 @@ The runtime config is a YAML file that defines global configuration used by the 
 
 A generic VM image that BOSH clones and configures to during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products.
 
+## <a id="team"></a> Team
+
+Each deployment can be managed by specific teams. A logged in UAA user can belong to one or more teams. [See details](director-users-uaa-perms.html#team-admin).
+
 ## <a id="vm-extension"></a> VM Extension
 
 VM extension is a named Virtual Machine configuration in the cloud config that allows to specify arbitrary IaaS specific configuration such as associated security groups and load balancers. [See usage details](cloud-config.html#vm-extensions).
