--- a/warden-cpi.html.md.erb
+++ b/warden-cpi.html.md.erb
@@ -104,6 +104,38 @@ properties:
 ```
 
 ---
+## <a id='cloud-config'>Example Cloud Config</a>
+
+```
+azs:
+- name: z1
+- name: z2
+
+vm_types:
+- name: default
+
+disk_types:
+- name: default
+  disk_size: 1024
+
+compilation:
+  workers: 5
+  az: z1
+  reuse_compilation_vms: true
+  vm_type: default
+  network: default
+
+networks:
+- name: default
+  type: manual
+  subnets:
+    - azs: [z1, z2]
+      range: 10.244.0.0/24
+      reserved: [10.244.0.1]
+      static: [10.244.0.34]
+```
+
+---
 ## <a id='notes'></a> Notes
 
 * Garden server does not have a UI; however, you can use [gaol CLI](https://github.com/xoebus/gaol) to interact with it directly.
