--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -8,7 +8,7 @@ title: Manifest v2 Schema
 
 The deployment manifest is a YAML file that defines the components and properties of the deployment. When an operator initiates a new deployment using the CLI, the Director receives a manifest and creates or updates a deployment with matching name.
 
-Assuming that you are using [cloud config](cloud-config.html), manifest is expected to have:
+Assuming that you are using [cloud config](cloud-config.html), your deployment manifest is expected to have:
 
 * [Deployment Identification](#deployment): A name for the deployment and the UUID of the Director managing the deployment
 * [Releases Block](#releases): Name and version of each release in a deployment
