--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -165,7 +165,7 @@ azs:
     availability_zone: east2
 
 vm_types:
-- name: small
+- name: default
   cloud_properties:
     instance_type: small
 - name: large
@@ -173,13 +173,13 @@ vm_types:
     instance_type: large
 
 disk_types:
-- name: small
+- name: default
   disk_size: 3000
 - name: large
   disk_size: 50_000
 
 networks:
-- name: private
+- name: default
   type: manual
   subnets:
   - range: 10.10.0.0/24
@@ -202,7 +202,7 @@ compilation:
   reuse_compilation_vms: true
   az: z1
   vm_type: large
-  network: private
+  network: default
 ```
 
 ---
