--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -66,8 +66,8 @@ a Git submodule or a Mercurial repo.
 
 ### <a id="strategy"></a> Choose a work strategy ###
 
-Choose whether you want to work one Step at a time or one job at a time.
-For releases with just a few jobs, going one Step at a time is probably easiest.
+Choose whether you want to work one step at a time or one job at a time.
+For releases with just a few jobs, going one step at a time is probably easiest.
 If you have a larger number of jobs, going one job at a time may be more efficient.
 
 ---
