--- a/vsphere-vmotion-support.html.md.erb
+++ b/vsphere-vmotion-support.html.md.erb
@@ -4,15 +4,12 @@ title: Storage DRS and vMotion Support
 
 <p class="note">Note: Storage DRS and vMotion can be used with bosh-vsphere-cpi v18+.</p>
 
-Prior to bosh-vsphere-cpi v18, Storage DRS and vMotion were not supported since the CPI was unable to locate renamed disks.
-Later versions of the CPI are able to locate disks migrated by vSphere as long as the disk is still attached to the expected VM.
-
 <p class="note">Warning: If a VM was accidentally deleted after a disk was migrated via DRS or vMotion, BOSH may be unable to locate the disk.</p>
 
-It is possible to recover the disk by following these steps:
-1. Locate the disk in the deleted VM's datastore. The folder will be named with the old VM's CID.
-1. Move the disk back to the `disk_path` folder specified in the manifest and rename the disk to the original disk CID.
-1. Run `bosh cck` to re-attach this disk to a new VM.
+Typically Storage DRS and vMotion moves attached persistent disks with the VM. When doing so it renames attached disks and places them into moved VM folder (typically called `vm-<uuid>`). Prior to bosh-vsphere-cpi v18, Storage DRS and vMotion were not supported since the CPI was unable to locate renamed disks. Later versions of the CPI are able to locate disks migrated by vSphere as long as the disks are attached to the VMs.
+
+As VMs are recreated, the CPI will move persistent disks out of VM folders so that they are not deleted with the VMs. This procedure will happen automatically when VMs are deleted (in `delete_vm` CPI call) and when disks are detached (in `detach_disk` CPI call).
+
 ---
 [Back to Table of Contents](index.html#cpi-config)
 
